// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <FileInput /> rendering should render no upload field when not visible 1`] = `<div />`;

exports[`Form component <FileInput /> rendering should render upload field correctly 1`] = `
<div>
  <div
    className="row mode_upload file"
  >
    <Title
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "submitLabel": "upload file",
        }
      }
    />
    <div
      className="col-12 invoer"
    >
      <input
        id="formUpload"
        onChange={[Function]}
        type="file"
      />
      <label
        className="secundary-blue"
        htmlFor="formUpload"
      >
        upload file
      </label>
    </div>
    <ErrorMessage
      getError={[MockFunction]}
      hasError={[MockFunction]}
      touched={false}
    />
  </div>
</div>
`;

exports[`Form component <FileInput /> rendering should render upload field with selected file correctly 1`] = `
<div>
  <div
    className="row mode_upload file"
  >
    <Title
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "submitLabel": "upload file",
        }
      }
    />
    <div
      className="col-12 file-input__preview"
    >
      <button
        className="file-input__clear-button"
        onClick={[Function]}
      />
      <img
        alt="Preview uploaded foto"
        className="file-input__preview-image"
        src="blob:http://host/c00d2e14-ae1c-4bb3-b67c-86ea93130b1c"
      />
    </div>
    <ErrorMessage
      getError={[MockFunction]}
      hasError={[MockFunction]}
      touched={false}
    />
  </div>
</div>
`;
